# cookiecutter-python-basic

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: {{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug_github }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug_github }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  {{ cookiecutter.project_slug }}.py
